--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "proxy": "https://api.coingecko.com"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "proxy": "https://api.coingecko.com"
   }
 }
